# rust-bitvmx-wallet

./: .gitignore  Cargo.toml  README.md  test.sh
.github/workflows/: ci.yaml  doc.yml
config/: development.json  development.yaml  regtest.yaml  testnet.yaml
src/: bdk_wallet.rs  cli.rs  config.rs  errors.rs  key_manager_signer.rs  lib.rs  main.rs  old_wallet.rs  wallet.rs  wallet_manager.rs
src/classic_wallet/: README.md  classic_wallet.rs  cli.rs  config.rs  errors.rs  lib.rs  main.rs  mod.rs
src/wallet/: cli.rs  config.rs  errors.rs  main.rs  mod.rs  types.rs  utils.rs  wallet.rs  wallet_manager.rs
tests/: cli_test.rs  helper.rs  wallet.rs  wallet_test.rs
