[package]
name = "bitvmx-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvmx-protocol-builder = { path = "../rust-bitvmx-protocol-builder" }
rust-bitvmx-storage-backend = { path = "../rust-bitvmx-storage-backend" }
bitvmx-bitcoin-rpc = { path = "../rust-bitvmx-bitcoin-rpc" }
bitvmx-key-manager = { path = "../rust-bitvmx-key-manager" }
bitvmx-settings = { path = "../rust-bitvmx-settings" }
thiserror = "2.0.12"
bitcoin = { version = "0.32.6", features = ["std", "rand-std"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = "1.0.204"
anyhow = "1.0.89"
clap = { version = "4.5", features = ["derive"] }
bdk_wallet = { version = "2.1.0", features = ["rusqlite"] }
bdk_bitcoind_rpc = "0.21.0"
ctrlc = "3.3.0"

[dev-dependencies]
bitcoind = { path = "../rust-bitcoind" }
assert_cmd = "2.0"
predicates = "3.1"

[lib]
name = "bitvmx_wallet"
path = "src/lib.rs"

[[bin]]
name = "wallet"
path = "src/wallet/main.rs"

[[bin]]
name = "classic"
path = "src/classic_wallet/main.rs"