[package]
name = "bitvmx-wallet"
version = "0.5.0"
edition = "2021"
readme = "README.md"

[dependencies]
bitvmx-protocol-builder = { git = "https://github.com/FairgateLabs/rust-bitvmx-protocol-builder.git", tag = "v0.5.0" }
rust-bitvmx-storage-backend = { git = "https://github.com/FairgateLabs/rust-bitvmx-storage-backend.git", tag = "v0.5.0" }
bitvmx-bitcoin-rpc = { git = "https://github.com/FairgateLabs/rust-bitvmx-bitcoin-rpc.git", tag = "v0.5.0" }
bitvmx-key-manager = { git = "https://github.com/FairgateLabs/rust-bitvmx-key-manager.git", tag = "v0.5.0" }
bitvmx-settings = { git = "https://github.com/FairgateLabs/rust-bitvmx-settings.git", tag = "v0.5.0" }
thiserror = "2.0.12"
bitcoin = { version = "0.32.6", features = ["std", "rand-std"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = "1.0.204"
anyhow = "1.0.89"
clap = { version = "4.5", features = ["derive"] }
bdk_wallet = { version = "2.2.0", features = ["rusqlite"] }
bdk_bitcoind_rpc = "0.22.0"
ctrlc = "3.3.0"

[dev-dependencies]
bitcoind = { git = "https://github.com/FairgateLabs/rust-bitcoind.git", tag = "v0.5.0" }
assert_cmd = "2.0"
predicates = "3.1"
redact = { version = "0.1", features = ["serde", "zeroize"] }

[lib]
name = "bitvmx_wallet"
path = "src/lib.rs"

[[bin]]
name = "wallet"
path = "src/wallet/main.rs"

[[bin]]
name = "classic"
path = "src/classic_wallet/main.rs"
